Show allowed tiles

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div class="row hidden">
+    <div class="row">
       <h4>Allowed Tiles</h4>
       <div id="allowedTiles-holder"></div>
     </div>
