Tidying up code.

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 
   <title>Roboblox</title>
 
-  <link href="javascript/bootstrap.min.css" rel="stylesheet" >
-  <link rel="stylesheet" href="javascript/main.css">
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/main.css">
 
-  <script src="javascript/p5.js"></script>
-  <script src="javascript/p5.dom.js"></script>
-  <script src="javascript/p5.easycam.js"></script>
-  <script src="javascript/drawing_data.js"></script>
-  <script src="javascript/parameters.js"></script>
-  <script src="javascript/tile.js"></script>
-  <script src="javascript/sketch.js"></script>
-  <script src="javascript/backCanvas.js"></script>
-  <script src="javascript/jQuery.js"></script>
-  <script src="javascript/draw2D.js"></script>
-  <script src="javascript/draw3D.js"></script>
-  <script src="javascript/brick.js"></script>
+  <script src="scripts/libs/jQuery.js"></script>
+  <script src="scripts/libs/p5.js"></script>
+  <script src="scripts/libs/p5.dom.js"></script>
+  <script src="scripts/libs/p5.easycam.js"></script>
+  <script src="scripts/drawing_data.js"></script>
+  <script src="scripts/parameters.js"></script>
+  <script src="scripts/tile.js"></script>
+  <script src="scripts/backCanvas.js"></script>
+  <script src="scripts/draw2D.js"></script>
+  <script src="scripts/draw3D.js"></script>
+  <script src="scripts/brick.js"></script>
+  <script src="scripts/sketch.js"></script>
 
 </head>
 
@@ -47,7 +47,7 @@
       <button class="col-1" id="btn-show-files">Files</button>
     </div>
 
-    <div class="row hidden" id="front-row">
+    <div class="row" id="front-row">
       <h4 id="front-canvas-title">Front Pattern </h4>
       <div id="front-div">
         <div  id="canvas-holder-front"></div>
