Got a first version of the 'toggle side' interaction working. Also with keyboard.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <script src="scripts/drawing_data.js"></script>
   <script src="scripts/parameters.js"></script>
   <script src="scripts/tile.js"></script>
-  <script src="scripts/backCanvas.js"></script>
+  <script src="scripts/board.js"></script>
+  <!-- <script src="scripts/backCanvas.js"></script> -->
   <script src="scripts/draw2D.js"></script>
   <script src="scripts/draw3D.js"></script>
   <script src="scripts/brick.js"></script>
@@ -54,7 +55,7 @@
       </div>
     </div>
 
-    <div class="row hidden" id="back-row">
+    <div class="row" id="back-row">
       <h4 id="back-canvas-title">Back Pattern </h4> 
       <div id="back-div">
         <div  id="canvas-holder-back"></div>
