Started on reimplementing the 3D view.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="scripts/parameters.js"></script>
   <script src="scripts/tile.js"></script>
   <script src="scripts/board.js"></script>
+  <script src="scripts/3d_board.js"></script>
   <!-- <script src="scripts/backCanvas.js"></script> -->
   <script src="scripts/draw2D.js"></script>
   <script src="scripts/draw3D.js"></script>
@@ -62,7 +63,7 @@
       </div>
     </div>
 
-    <div class="row hidden" id="3d-row">
+    <div class="row" id="3d-row">
       <h4 id="3d-canvas-title">3D View</h4>
       <div id="3d-div">
         <div id="canvas-holder-3d"></div>
