Got 3D version working. Fixed bug with toggle not working.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row hidden">
       <h4>Allowed Tiles</h4>
       <div id="allowedTiles-holder"></div>
     </div>
