Got 3D version working better. Still have a bug where back tile faces are drawn at half width sometimes.

--- a/index.html
+++ b/index.html
@@ -49,24 +49,28 @@
       <button class="col-1" id="btn-show-files">Files</button>
     </div>
 
-    <div class="row" id="front-row">
-      <h4 id="front-canvas-title">Front Pattern </h4>
-      <div id="front-div">
-        <div  id="canvas-holder-front"></div>
+    <div class="row mt1rem">
+      <div class="col-6">
+        <div id="front-row">
+          <h4 id="front-canvas-title">Front Pattern </h4>
+          <div id="front-div">
+            <div  id="canvas-holder-front"></div>
+          </div>  
+        </div>
+        <div id="back-row" class="hidden">
+          <h4 id="back-canvas-title">Back Pattern </h4> 
+          <div id="back-div">
+            <div  id="canvas-holder-back"></div>
+          </div>    
+        </div>
       </div>
-    </div>
-
-    <div class="row" id="back-row">
-      <h4 id="back-canvas-title">Back Pattern </h4> 
-      <div id="back-div">
-        <div  id="canvas-holder-back"></div>
-      </div>
-    </div>
-
-    <div class="row" id="3d-row">
-      <h4 id="3d-canvas-title">3D View</h4>
-      <div id="3d-div">
-        <div id="canvas-holder-3d"></div>
+      <div class="col-6">
+        <div class="row" id="3d-row">
+          <h4 id="3d-canvas-title">3D View</h4>
+          <div id="3d-div">
+            <div id="canvas-holder-3d"></div>
+          </div>
+        </div>    
       </div>
     </div>
 
