Got 3D view lining up a bit better in the canvas. Regardless of number of cols and rows.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
   <script src="scripts/parameters.js"></script>
   <script src="scripts/tile.js"></script>
   <script src="scripts/board.js"></script>
-  <script src="scripts/3d_board.js"></script>
-  <!-- <script src="scripts/backCanvas.js"></script> -->
-  <script src="scripts/draw2D.js"></script>
-  <script src="scripts/draw3D.js"></script>
   <script src="scripts/brick.js"></script>
+  <script src="scripts/3d_board.js"></script>
   <script src="scripts/sketch.js"></script>
 
 </head>
@@ -57,7 +54,7 @@
             <div  id="canvas-holder-front"></div>
           </div>  
         </div>
-        <div id="back-row" class="hidden">
+        <div id="back-row">
           <h4 id="back-canvas-title">Back Pattern </h4> 
           <div id="back-div">
             <div  id="canvas-holder-back"></div>
@@ -65,7 +62,7 @@
         </div>
       </div>
       <div class="col-6">
-        <div class="row" id="3d-row">
+        <div id="3d-row">
           <h4 id="3d-canvas-title">3D View</h4>
           <div id="3d-div">
             <div id="canvas-holder-3d"></div>
