--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
   <title>Roboblox</title>
 
-  <link rel="stylesheet" href="styles/bootstrap.min.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/style.css">
 
   <script src="scripts/libs/jQuery.js"></script>
   <script src="scripts/libs/p5.js"></script>
@@ -38,12 +37,12 @@
 
 <body>
   <main role="main" class="container">
-    <div class="row">
-      <button class="col-1" id="btn-show-front">Front</button>
-      <button class="col-1" id="btn-show-back">Back</button>
-      <button class="col-1" id="btn-show-3d">3D View</button>
-      <button class="col-1" id="btn-show-settings">Settings</button>
-      <button class="col-1" id="btn-show-files">Files</button>
+    <div class="row mt1rem">
+      <button class="col-1 ml1rem" id="btn-show-front">Front</button>
+      <button class="col-1 ml1rem" id="btn-show-back">Back</button>
+      <button class="col-1 ml1rem" id="btn-show-3d">3D View</button>
+      <button class="col-1 ml1rem" id="btn-show-settings">Settings</button>
+      <button class="col-1 ml1rem" id="btn-show-files">Files</button>
     </div>
 
     <div class="row mt1rem">
