Generate JSON for the board

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <button class="col-1 ml1rem bg-secondary" 
               id="btn-show-back">Back</button>
       <button class="col-1 ml1rem bg-secondary" 
-              id="btn-show-3d">3D View</button>
-      <button class="col-1 ml1rem bg-secondary" 
               id="btn-show-settings">Settings</button>
       <button class="col-1 ml1rem bg-secondary" 
               id="btn-show-files">Files</button>
+      <button class="col-1 ml1rem bg-secondary" 
+              id="btn-json">JSON</button>
     </div>
 
     <div class="row mt1rem">
