Got a basic projector screen working.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
               id="btn-show-files">Files</button>
       <button class="col-1 ml1rem bg-secondary" 
               id="btn-json">JSON</button>
+      <button class="col-1 ml1rem bg-secondary"
+              id="btn-projector">Projector</button>
+      <button class="col-1 ml1rem bg-secondary"
+              id="btn-hello">Hello</button>
     </div>
 
     <div class="row mt1rem">
