--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <script src="scripts/drawing_data.js"></script>
   <script src="scripts/parameters.js"></script>
   <script src="scripts/tile.js"></script>
-  <script src="scripts/board.js"></script>
   <script src="scripts/brick.js"></script>
+  <script src="scripts/2d_board.js"></script>
   <script src="scripts/3d_board.js"></script>
   <script src="scripts/sketch.js"></script>
 
