Refactor board data out of board display

--- a/projector.html
+++ b/projector.html
@@ -38,7 +38,8 @@
 <body>
   <main role="main" class="container" id="main-elt">
     <button id="btn-fullscreen">Fullscreen</button>
-    <div id="canvas-holder-3d"></div>
+    <button id="btn-windowed">Windowed</button>
+    <div id="canvas-holder-3d-projector"></div>
   </main>
 </body>
 
