--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="scripts/parameters.js"></script>
   <script src="scripts/tile.js"></script>
   <script src="scripts/brick.js"></script>
+  <script src="scripts/board.js"></script>
   <script src="scripts/2d_board.js"></script>
   <script src="scripts/3d_board.js"></script>
   <script src="scripts/sketch.js"></script>
