Got a first rough version of the settings working.

--- a/projector.html
+++ b/projector.html
@@ -37,8 +37,12 @@
 
 <body>
   <main role="main" class="container" id="main-elt">
-    <button id="btn-fullscreen">Fullscreen</button>
-    <button id="btn-windowed">Windowed</button>
+    <div class="row mt1rem">
+      <button class="col-3 ml1rem bg-secondary" 
+              id="btn-fullscreen">Show Fullscreen</button>
+      <button class="col-3 ml1rem bg-secondary" 
+              id="btn-windowed">Show Windowed</button>
+    </div>
     <div id="canvas-holder-3d-projector"></div>
   </main>
 </body>
