Make grid smaller with fewer divisions in bricks for better performance in exhibition. Tweak tile and ui of 2d boards.

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     <div class="row mt1rem">
       <div class="col-6">
         <div id="front-row">
-          <h4 id="front-canvas-title">Front </h4>
+          <h4 id="front-canvas-title">Click to Change Front Side</h4>
           <div id="front-div">
             <div  id="canvas-holder-front"></div>
           </div>  
         </div>
         <div id="back-row">
-          <h4 id="back-canvas-title">Back </h4> 
+          <h4 id="back-canvas-title">Click to Change Back Side</h4> 
           <div id="back-div">
             <div  id="canvas-holder-back"></div>
           </div>    
@@ -69,7 +69,7 @@
       </div>
       <div class="col-6">
         <div id="3d-row">
-          <h4 id="3d-canvas-title">3D View</h4>
+          <h4 id="3d-canvas-title">Drag to See 3D</h4>
           <div id="3d-div">
             <div id="canvas-holder-3d"></div>
           </div>
