Display the JSON server url in the client

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
       <h4>Allowed Tiles</h4>
       <div id="allowedTiles-holder"></div>
     </div>
+    
+    <div id="server-url">JSON&nbsp;Server:&nbsp;<a id="server-url-link" target="_blank" href="">loading...</a></div>
 
   </main>
 
