--- a/index.html
+++ b/index.html
@@ -38,42 +38,46 @@
 
 <body>
   <main role="main" class="container">
-    <div class="row mt1rem">
-      <button class="col-2 ml1rem bg-secondary hidden" 
-              id="btn-show-front">Show Front</button>
-      <button class="col-2 ml1rem bg-secondary" 
-              id="btn-show-back">Show Back</button>
-      <button class="col-2 ml1rem bg-secondary" 
-              id="btn-show-settings">Settings</button>
-      <button class="col-2 ml1rem bg-secondary" 
-              id="btn-save-file">Save</button>
-      <!-- <span id="file-input-holder"></span> -->
-      <button class="col-2 ml1rem bg-secondary"
-              id="btn-projector">Projector</button>
+    <div id="top-menu">
+      <div class="row mt1rem">
+        <button class="col-2 ml1rem bg-secondary hidden" 
+                id="btn-show-front">Show Front</button>
+        <button class="col-2 ml1rem bg-secondary" 
+                id="btn-show-back">Show Back</button>
+        <button class="col-2 ml1rem bg-secondary" 
+                id="btn-show-settings">Settings</button>
+        <button class="col-2 ml1rem bg-secondary" 
+                id="btn-save-file">Save</button>
+        <!-- <span id="file-input-holder"></span> -->
+        <button class="col-2 ml1rem bg-secondary"
+                id="btn-projector">Projector</button>
+      </div>
     </div>
 
-    <div class="row mt1rem">
-      <div class="col-6">
-        <div id="front-row">
-          <h4 id="front-canvas-title">Click to Change Front Side</h4>
-          <div id="front-div">
-            <div  id="canvas-holder-front"></div>
-          </div>  
+    <div id="main-area">
+      <div class="row mt1rem">
+        <div class="col-6">
+          <div id="front-row">
+            <h4 id="front-canvas-title">Click to Change Front Side</h4>
+            <div id="front-div">
+              <div  id="canvas-holder-front"></div>
+            </div>  
+          </div>
+          <div id="back-row">
+            <h4 id="back-canvas-title">Click to Change Back Side</h4> 
+            <div id="back-div">
+              <div  id="canvas-holder-back"></div>
+            </div>    
+          </div>
         </div>
-        <div id="back-row">
-          <h4 id="back-canvas-title">Click to Change Back Side</h4> 
-          <div id="back-div">
-            <div  id="canvas-holder-back"></div>
+        <div class="col-6">
+          <div id="3d-row">
+            <h4 id="3d-canvas-title">Drag to See 3D</h4>
+            <div id="3d-div">
+              <div id="canvas-holder-3d"></div>
+            </div>
           </div>    
         </div>
-      </div>
-      <div class="col-6">
-        <div id="3d-row">
-          <h4 id="3d-canvas-title">Drag to See 3D</h4>
-          <div id="3d-div">
-            <div id="canvas-holder-3d"></div>
-          </div>
-        </div>    
       </div>
     </div>
 
@@ -136,7 +140,7 @@
       <h4>Allowed Tiles</h4>
       <div id="allowedTiles-holder"></div>
     </div>
-    
+
     <div id="server-url">JSON&nbsp;Server:&nbsp;<a id="server-url-link" target="_blank" href="">loading...</a></div>
 
   </main>
