--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
       <div class="row mt1rem">
         <div class="col-6">
           <div id="front-row">
-            <h4 id="front-canvas-title">Click to Change Front Side</h4>
+            <!-- <h4 id="front-canvas-title">Click to Change Front Side</h4> -->
             <div id="front-div">
               <div  id="canvas-holder-front"></div>
             </div>  
           </div>
           <div id="back-row">
-            <h4 id="back-canvas-title">Click to Change Back Side</h4> 
+            <!-- <h4 id="back-canvas-title">Click to Change Back Side</h4>  -->
             <div id="back-div">
               <div  id="canvas-holder-back"></div>
             </div>    
           </div>
         </div>
         <div class="col-6">
-          <div id="3d-row">
-            <h4 id="3d-canvas-title">Drag to See 3D</h4>
+          <div id="threed-row">
+            <!-- <h4 id="3d-canvas-title">Drag to See 3D</h4> -->
             <div id="3d-div">
               <div id="canvas-holder-3d"></div>
             </div>
