Fix size of side toggle buttons.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <button class="col-2 ml1rem bg-secondary" 
                 id="btn-save-file">Save</button>
         <!-- <span id="file-input-holder"></span> -->
-        <button class="col-2 ml1rem bg-secondary"
-                id="btn-projector">Projector</button>
+        <!-- <button class="col-2 ml1rem bg-secondary"
+                id="btn-projector">Projector</button> -->
       </div>
     </div>
 
