Improve layout of settings lightbox

--- a/index.html
+++ b/index.html
@@ -85,9 +85,16 @@
       <div id="settings-bg"></div>
       <div id="controls-holder">
         <button id="btn-close-params" class="bg-secondary">X</button>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-6">
-
+            <h4>Shape Parameters</h4>
+          </div>
+          <div class="col-6">  
+            <h4>Example Tile</h4>
+          </div>
+        </div> -->
+        <div class="row full-height">
+          <div class="col-6">
             <h4>Shape Parameters</h4>
             <table>
               <tr>
@@ -129,7 +136,6 @@
             </table>
           </div>
           <div class="col-6">
-            <h4>Example tile</h4>
             <div id="example-tile-holder"></div>
           </div>  
         </div>
