Initial changes to add ability to adjust rows and cols.

--- a/index.html
+++ b/index.html
@@ -85,15 +85,28 @@
       <div id="settings-bg"></div>
       <div id="controls-holder">
         <button id="btn-close-params" class="bg-secondary">X</button>
-        <!-- <div class="row">
-          <div class="col-6">
-            <h4>Shape Parameters</h4>
-          </div>
-          <div class="col-6">  
-            <h4>Example Tile</h4>
-          </div>
-        </div> -->
         <div class="row full-height">
+          <div class="col-12">
+            <h4>Number of Tiles</h4>
+            <table>
+              <tr>
+                <td class="quarter-col">
+                  <strong>Columns:</strong>
+                  <span id="txtNumCols-holder"></span>
+                </td>
+                <td>
+                  <span id="sldNumCols-holder"></span>
+                </td>
+                <td class="quarter-col">
+                  <strong>Rows:</strong>
+                  <span id="txtNumRows-holder"></span>
+                </td>
+                <td>
+                  <span id="sldNumRows-holder"></span>
+                </td>
+              </tr>
+            </table>
+          </div>
           <div class="col-6">
             <h4>Shape Parameters</h4>
             <table>
