--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="scripts/board.js"></script>
   <script src="scripts/2d_board.js"></script>
   <script src="scripts/3d_board.js"></script>
+  <script src="scripts/app.js"></script>
   <script src="scripts/sketch.js"></script>
 
 </head>
