Hooked parameter sliders up

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <!-- <script src="scripts/libs/p5.dom.js"></script>
   <script src="scripts/libs/p5.easycam.js"></script> -->
   <script src="scripts/drawing_data.js"></script>
+  <script src="scripts/labelSlider.js"></script>
   <script src="scripts/parameters.js"></script>
   <script src="scripts/tile.js"></script>
   <script src="scripts/brick.js"></script>
