Got 3D interface working.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 
   <link rel="stylesheet" href="styles/style.css">
 
-  <!-- <script src="scripts/libs/jQuery.js"></script> -->
   <script src="scripts/libs/p5.js"></script>
-  <!-- <script src="scripts/libs/p5.dom.js"></script>
-  <script src="scripts/libs/p5.easycam.js"></script> -->
   <script src="scripts/drawing_data.js"></script>
   <script src="scripts/labelSlider.js"></script>
   <script src="scripts/parameters.js"></script>
@@ -36,6 +33,8 @@
 </head>
 
 <body>
+  <div id="params"></div>
+
 
   <!--
   <main role="main" class="container">
